# trash-dashboard

./: README.md  pyproject.toml  requirement.txt  train_model.py
src/: app.py  rf_set3_model.pkl  scaler_set3.pkl  selector_set3.pkl
